<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip cost calculator</string>
    <string name="update">Update values</string>
    <string name="coche_tipo_txt">Vehicle type</string>
    <string name="kilometros_txt">Trip distance</string>
    <string name="kilometros_hint">Distance</string>
    <string name="peajes_txt">Toll cost</string>
    <string name="peajes_hint">All tolls cost</string>
    <string name="ruta_tipo_txt">Road type</string>
    <string name="personas_txt">Number of passengers</string>
    <string name="personas_hint">Passengers</string>
    <string name="extras_txt">Extra expenses</string>
    <string name="extras_hint">Food, motel, etc</string>
    <string name="preciogasolina_txt">Fuel price</string>
    <string name="units_txt">Units</string>
    <string name="preciogasolina_hint">Fuel price</string>
    <string name="coche_tipocombustible_txt">Fuel type</string>
    <string name="help"><b><i>This application allows to calculate the trip cost among shared car passengers.</i></b>\n\n\n<b>NOTE</b>: You can get the the final amount, selecting the <b><i>results</i></b> tab.\n\nTo get the final cost per passenger we use next variables:\n\n<b>Vehicle specifications:</b>\n\n-Vehicle type: Type of vehicle used for the trip.\n\n-Type of fuel: Type of fuel of the vehicle.\n\n<b>Road specifications:</b>\n\n-Units: measure units used in your country.\n\n-Kilometers: Total distance of the trip.\n\n-Toll cost: Cost of all tolls.\n\n-Fuel cost: Fuel cost (per liter).\n\n-Route type: Route type mainly used on the trip (select mixed if you cannot determine).\n\n<b>Passengers:</b>\n\n-Number of passengers: Number of passengers that travels on the vehicle.\n\n-Extra expenses: Extra expenses like food, motel, etc\n\n\n<b>DISCLAIMER</b>: The final cost will be an approximation based on data introduced by the user.\n\n\n\n\n</string>
    <string name="resultado">You have done no trip with a fuel cost of 0.\n\nTotal cost if tolls and extras is 0.\n\nTotal cost of the trip is 0 and each one of the 1 passengers must pay total amount of 0.\n\nDISCLAMER: Remember that the result values are approximated and you must use them as a reference."</string>
    <string name="calcularresultado">Calculate trip cost</string>
    <string name="total">COST PER PASSENGER: 0</string>
    <string name="advice"></string>
    
    <string-array name="tipos_de_coche">
        <item>Small</item>
        <item>Compact</item>
        <item>Wagon / Minivan</item>
        <item>Sedan</item>
        <item>Coupe</item>
        <item>Sports car</item>
        <item>Off-Road / Pickup</item>
        <item>Luxury</item>
    </string-array>
    <string-array name="tipos_de_ruta">
        <item>City</item>
        <item>Intercity</item>
        <item>Highway</item>
        <item>Mountain</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="tipos_de_combustible">
        <item>Gasoline</item>
        <item>Diesel</item>
        <item>Hibrid</item>
    </string-array>
   <string-array name="unidades">
        <item>Kilometers / Liters</item>
        <item>Miles / Gallons</item>
    </string-array>
</resources>