<?xml version="1.0" encoding="utf-8"?>
<!-- People tab -->
        	<!-- inicia el ScrollView -->
        	<LinearLayout
				android:id="@+id/tab4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/enpasajeros"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
        	<ScrollView 
        	    android:layout_width="fill_parent"
        		android:layout_height="fill_parent">
        	<LinearLayout
				android:id="@+id/insidetab4"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
				<TextView
					android:id="@+id/personas_txt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:text="@string/personas_txt" />
				<EditText
					android:id="@+id/personas_edit"
					android:hint="@string/personas_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<TextView
					android:id="@+id/extras_txt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:text="@string/extras_txt" />
				<EditText
					android:id="@+id/extras_edit"
					android:hint="@string/extras_hint"
					android:layout_width="fill_parent"
					android:inputType="numberDecimal"
					android:layout_height="wrap_content"
					/>
				<Button
					android:id="@+id/personas_update"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:text="@string/update" 
					/>
				<TextView
					android:id="@+id/advice3"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:text="@string/advice" />
        	</LinearLayout>
        	</ScrollView>
        	</LinearLayout>