<?xml version="1.0" encoding="utf-8"?>
<!-- Car tab -->
            <!-- inicia el ScrollView -->
   			<LinearLayout
				android:id="@+id/tab2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/envehiculo"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
        	<ScrollView 
        	    android:layout_width="fill_parent"
        		android:layout_height="fill_parent">
          	<LinearLayout
				android:id="@+id/insidetab2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
				
				<TextView
					android:id="@+id/coche_tipo_txt"
					android:layout_width="fill_parent"
					android:layout_marginTop="20dip"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/coche_tipo_txt" />
				<Spinner
   					android:id="@+id/tipo_coche"
    				android:layout_width="fill_parent"
   					 android:layout_height="wrap_content" 
   				/>
				<TextView
					android:id="@+id/coche_tipocombustible_txt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:text="@string/coche_tipocombustible_txt" />
				<Spinner
   					android:id="@+id/tipo_combustible"
    				android:layout_width="fill_parent"
   					 android:layout_height="wrap_content" 
   				/>
				<Button
					android:id="@+id/coche_update"
					android:layout_width="wrap_content"
					android:layout_marginTop="20dip"
					android:layout_height="wrap_content"
					android:text="@string/update" 
					/>
				<TextView
					android:id="@+id/advice1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:text="@string/advice" />
        	</LinearLayout>
        	</ScrollView>
        	</LinearLayout>