<?xml version="1.0" encoding="utf-8"?>
<!-- Result tab -->
            <!-- inicia el ScrollView -->
   			<LinearLayout
				android:id="@+id/tab1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/resultado"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
        	<ScrollView 
        	    android:layout_width="fill_parent"
        		android:layout_height="fill_parent">
          	<LinearLayout
				android:id="@+id/insidetab1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:orientation="vertical"
				xmlns:android="http://schemas.android.com/apk/res/android">
				<Button
					android:id="@+id/calcular_resultado"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:text="@string/calcularresultado" 
					/>
				<TextView
					android:id="@+id/total"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:textSize="20sp"
					android:textStyle="bold"
					android:text="@string/total" />
				<TextView
					android:id="@+id/resultado"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dip"
					android:textColor="#000000"
					android:text="@string/resultado" />
				
        	</LinearLayout>
        	</ScrollView>
        	</LinearLayout>